--- a/index.html
+++ b/index.html
@@ -6,45 +6,148 @@
   <title>Milky Milk Landing Page</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" />
   <link rel="stylesheet" href="style.css" />
+  <style>
+    body {
+  font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+  background-color: #fff;
+}
+
+
+.animated-navbar {
+  animation: slideDown 1s ease-in-out;
+}
+
+@keyframes slideDown {
+  from {
+    transform: translateY(-100%);
+    opacity: 0;
+  }
+  to {
+    transform: translateY(0);
+    opacity: 1;
+  }
+}
+
+
+
+.magic-link {
+  position: relative;
+  color: #000;
+  transition: color 0.3s ease;
+}
+
+.magic-link::after {
+  content: "";
+  position: absolute;
+  width: 100%;
+  height: 3px;
+  left: 0;
+  bottom: -5px;
+  background-color: #0dcaf0;
+  transform: scaleX(0);
+  transform-origin: right;
+  transition: transform 0.4s ease-out;
+}
+
+.magic-link:hover {
+  color: #0dcaf0;
+}
+
+.magic-link:hover::after {
+  transform: scaleX(1);
+  transform-origin: left;
+}
+
+.logo-enhanced {
+  background-color: #ffffff;        
+  padding: 10px;                   
+  border-radius: 50%;              
+  box-shadow: 0 4px 10px rgba(0, 0, 0, 0.2);  
+  transition: transform 0.3s ease;
+}
+
+.logo-enhanced:hover {
+  transform: scale(1.05);           
+}
+
+.hero {
+  min-height: 80vh;
+}
+.custom-order-btn {
+  background-color: #0dcaf0; 
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  transition: background-color 0.3s ease, color 0.3s ease;
+}
+
+.custom-order-btn:hover {
+  background-color: white;
+  color: #0dcaf0;
+  border: 1px solid #0dcaf0;
+}
+
+.main-img {
+  max-width: 100%;
+  height: auto;
+  animation: float 3s ease-in-out infinite;
+}
+
+@keyframes float {
+  0%, 100% {
+    transform: translateY(0px);
+  }
+  50% {
+    transform: translateY(-15px);
+  }
+}
+
+  </style>
 </head>
 <body>
 
 
     
-  <nav class="navbar navbar-expand-lg navbar-light bg-white px-5 py-3">
-    <a class="navbar-brand" href="#">
-      <img src="https://cdn-icons-png.flaticon.com/512/883/883407.png" alt="Milky Milk Logo" width="40" />
-    </a>
-    <div class="collapse navbar-collapse justify-content-end">
-      <ul class="navbar-nav">
-        <li class="nav-item"><a class="nav-link" href="#">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Flavors</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Pricing</a></li>
-        <li class="nav-item"><a class="nav-link" href="#">Contact</a></li>
-      </ul>
-    </div>
-  </nav>
+    <nav class="navbar navbar-expand-lg navbar-light bg-white px-5 py-3 animated-navbar shadow-sm">
+        <a class="navbar-brand" href="#">
+          <img src="images/Mil.png" alt="Milky Milk Logo" width="150" height="150" class="logo-enhanced" />
+        </a>
+        <div class="collapse navbar-collapse justify-content-end">
+          <ul class="navbar-nav">
+            <li class="nav-item"><a class="nav-link magic-link" href="#">Home</a></li>
+            <li class="nav-item"><a class="nav-link magic-link" href="#">Flavors</a></li>
+            <li class="nav-item"><a class="nav-link magic-link" href="#">Pricing</a></li>
+            <li class="nav-item"><a class="nav-link magic-link" href="#">Contact</a></li>
+          </ul>
+        </div>
+      </nav>
+      
 
 
   
   <section class="container-fluid hero d-flex align-items-center px-5 py-5">
     <div class="row w-100">
       <div class="col-md-6 d-flex flex-column justify-content-center">
-        <h1 class="fw-bold">It’s not just Milk<br><span class="text-success">It’s Milky Milk</span></h1>
-        <p class="text-muted">Dive into creamy, dreamy flavors! From chocolate to strawberry, every sip of Milky Milk brings joy to your taste buds.</p>
-        <a href="#" class="btn btn-success w-25">Order Here!</a>
-      </div>
+        <h1 class="fw-bold text-dark">
+            It’s not just Milk<br>
+            <h1 class="fw-bold text-dark">
+                It’s <span class="text-info">Milky Milk</span>
+              </h1>
+                        </h1>
+                  <p class="text-muted">Dive into creamy, dreamy flavors! From chocolate to strawberry, every sip of Milky Milk brings joy to your taste buds.</p>
+                  <a href="#" class="btn custom-order-btn">Order Here!</a>
+                </div>
       <div class="col-md-6 text-center">
-        <img src="https://freepngimg.com/thumb/milk/2-milk-png-image.png" class="main-img" alt="Milky Milk Bottle" />
+        <img src="images/IMG_1809.JPG" class="main-img" alt="Milky Milk Bottle" />
       </div>
     </div>
   </section>
 
   
   <div class="text-center mt-4 mb-5">
-    <img src="https://freepngimg.com/thumb/milk/7-milk-png-image.png" width="60" class="mx-2" />
-    <img src="https://freepngimg.com/thumb/milk/3-milk-png-image.png" width="60" class="mx-2" />
-    <img src="https://freepngimg.com/thumb/milk/5-milk-png-image.png" width="60" class="mx-2" />
+    <img src="images/IMG_1811.JPG" width="60" class="mx-2" />
+    <img src="images/IMG_1812.JPG" width="60" class="mx-2" />
+    <img src="images/IMG_1823.JPG" width="120" class="mx-2" />
   </div>
 
 </body>
